...
                                <nil key="highlightedColor"/>
                            </label>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ziR-eq-PW0">
                                <rect key="frame" x="0.0" y="64" width="375" height="552"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="ywe-tf-qFA" customClass="TaskListViewCell" customModule="todoReminder" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ywe-tf-qFA" id="fb0-GI-MAI">
                                            <rect key="frame" x="0.0" y="0.0" width="349" height="80"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="vBc-zZ-drB"/>
                    </view>
                    <navigationItem key="navigationItem" title="タスク一覧" id="Jzg-oW-5sT">
                        <barButtonItem key="rightBarButtonItem" title="登録" id="o0w-kC-MLG">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="registerButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="h11-ru-EKq" kind="show" identifier="register" id="KXM-48-Ob0"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                    </fragment>
                                </attributedString>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gxy-3a-oaz">
                                <rect key="frame" x="16" y="81" width="343" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="taskNameInput"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="taskName:" destination="9t4-9a-OJ5" eventType="editingDidEnd" id="Dk7-J6-8dA"/>
                                </connections>
                            </textField>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5bB-K1-NXp">
                                <rect key="frame" x="16" y="570" width="148" height="34"/>
                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="registButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="Vmn-gb-5jQ"/>
                                    <constraint firstAttribute="width" constant="148" id="shO-zh-I8G"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="登録"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e3R-1c-27t">
                                <rect key="frame" x="211" y="570" width="148" height="34"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="deleteButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="148" id="R26-Bf-xaS"/>
                                    <constraint firstAttribute="height" constant="34" id="s8P-B1-0Dc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="削除">
...
