...
    }
    
    @IBAction func registerButtonPressed(_ sender: Any) {
        let now = Date()
        
        if (taskName.text == "" || taskLimit.text == "") {
            makeAlert(title: "タスク名とタスク期限は必須です", isAddAction: false)
        } else if (now > dateFormat(stringDate: taskLimit.text!)) {
            makeAlert(title: "現在より少なくとも1分後を指定して下さい", isAddAction: false)
        } else {
            let realm = try! Realm()
            let task : Task
            if (isRegister) {
                task = Task()
            } else {
...
